--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <span id="gradient-text">
                 <span id="seconds"></span><sup>Happy 22<sup>nd</sup></sup> 
-                <a href="message.html" target="_blank">
+                <a href="story\" target="_blank">
                     <img src="assets/unicorn.png" alt="Unicorn" style="width: 30px; height: auto;">
                     Birthday
                 </a>
@@ -46,7 +46,7 @@
     <div id="pictures" class="animate__animated animate__fadeIn"></div>
     <div id="messages" class="animate__animated animate__fadeIn"></div>
     <div class="buttons">
-      <a type="button" href="https://www.youtube.com/watch?v=k3zimSRKqNw" title="Follow you">
+      <a type="button" href="https://www.youtube.com/@GamersNearMe" title="Follow you">
         <span class="heart animate__delay-5s"><span>Made with </span><img
             class="heart-icon animate__delay-5s" src="assets/icons8-diamond-heart-48.png"
             style="width: 18px;height: 15px;" alt="3" title="Hey D, :)"> by <span id="heartText">Gamers Near Me</span></span>
