--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <body>
+  <audio class="song" autoplay controls loop>
+    <source src="audio/hbd.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
   <div class="container">
     <div id="one" class="one">
       <h1>Hey
