--- a/story/index.html
+++ b/story/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+  <audio class="song" autoplay controls loop>
+    <source src="audio/mhbd.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
@@ -126,17 +130,6 @@
     </div>
   </div>  
 </body>
-<footer>
-<div class="buttons">
-  <a type="button" href="https://www.youtube.com/watch?v=k3zimSRKqNw" title="Follow you">
-    <span class="heart animate__delay-5s"><span>Made with </span><img
-        class="heart-icon animate__delay-5s" src="assets/icons8-diamond-heart-48.png"
-        style="width: 18px;height: 15px;" alt="3" title="Hey D, :)"> by <span id="heartText">Gamers Near Me</span></span>
-  </a>
-  <a type="button" class="refresh-btn animate__delay-5s" onClick="refreshPage()"><img
-      src="assets/icons8-refresh-30.png" style="width: 23px;height: 23px;" alt="Refresh" title="Refresh"></a>
-</div>
-</footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
